# FP

fp-homework/: stack.yaml
fp-homework/hw1/: hw1.cabal
fp-homework/hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs
fp-homework/hw1/test/Block1/: Task1Spec.hs  Task2Spec.hs  Task3Spec.hs
fp-homework/hw2/: hw2.cabal
fp-homework/hw2/src/Block1/: Task1.hs  Task2.hs
fp-homework/hw2/src/Block2/: Task1.hs  Task2.hs
fp-homework/hw2/src/Block3/: Task1.hs
fp-homework/hw2/test/Block1/: Task1Spec.hs
fp-homework/hw2/test/Block2/: Task2Spec.hs
fp-homework/hw3/: hw3.cabal
fp-homework/hw3/app/: Main.hs
fp-homework/hw3/src/: FilesystemCommands.hs  FilesystemCore.hs  FilesystemDumper.hs  FilesystemLoader.hs  Path.hs  SystemEntry.hs  Utils.hs
fp-homework/hw3/test/: FilesystemCoreSpec.hs  TestUtils.hs
hw2/proj/: proj.cabal
hw2/proj/src/: FSUtils.hs  Node.hs  Path.hs  Utils.hs
hw3/proj/: stack.yaml
hw3/proj/app/: Main.hs
hw3/proj/src/: FSIO.hs  FSOrerations.hs
hw3/proj/test/: FSUtilsSpec.hs  TestUtils.hs
hw4/: hw4.cabal
hw4/app/: Main.hs
hw4/src/: ConcurrentHashTable.hs  Task1.hs  Task1Bad.hs  Task2.hs  Task67.hs
hw4/test/: ConcurrentHashTableSpec.hs  GeomSpec.hs  TestUtils.hs
