name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1.Task1, Block1.Task2, Block1.Task3,
   Block2.Task1, Block2.Task2,
   Block3.Task1, Block3.Task2, Block3.Task3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , QuickCheck
    , hw2
  other-modules:
      Block1.Task1Spec, Block1.Task2Spec, Block1.Task3Spec,
      Block2.Task1Spec, Block2.Task2Spec,
      Block3.Task3Spec
  default-language: Haskell2010
